added register and activate tests, refactor code
